<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up_Activity">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:layout_below="@+id/username"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_below="@id/email_signup"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"/>

    <EditText
        android:id="@+id/cpasswprd"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/cpassword"
        android:layout_below="@id/password_signup"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cpasswprd"
        android:layout_alignEnd="@id/cpasswprd"
        android:layout_alignRight="@id/cpasswprd"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="-111dp"
        android:layout_marginRight="-111dp"
        android:background="@drawable/btn_background"
        android:hint="@string/signup"
        android:text="@string/signup"/>

</RelativeLayout>