<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn_Activity">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:hint="@string/email"
        android:background="@drawable/edittext_background"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:background="@drawable/edittext_background"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:background="@drawable/btn_background"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acct"
        android:textColor="#000"
        android:layout_below="@id/login_btn"
        android:layout_marginLeft="290dp"
        android:textSize="15dp"/>



</RelativeLayout>